@@ -29,6 +29,13 @@ Escape text/uri-list.
 
 FEATURES FOR 1.3
 
+Bookmarks:
+- Don't close menu when opening submenu
+- Keyboard shortcut
+- Show selection groups?
+- Better positioning
+- Auto-add recent operations
+
 Some way to process the files found by Find.
 
 Dragging over the panel should do the raise thing.
