@@ -1,0 +1,13 @@
+/*
+ * $Id$
+ *
+ * ROX-Filer, filer for the ROX desktop project
+ * By Thomas Leonard, <tal197@users.sourceforge.net>.
+ */
+
+#ifndef _BOOKMARKS_H
+#define _BOOKMARKS_H
+
+void bookmarks_show_menu(FilerWindow *filer_window);
+
+#endif /* _BOOKMARKS_H */
