@@ -2,6 +2,14 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+05-Nov-2002
+~~~~~~~~~~~
+Added Bookmarks toolbar icon (Liav).
+
+04-Nov-2002
+~~~~~~~~~~~
+Removed some unused code and fixed a possible race condition.
+
 03-Nov-2002
 ~~~~~~~~~~~
 Update error message to give correct version of MIME database (reported by
